<resources>
    <string name="app_name">MyBbQ</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="Login">Login</string>
    <string name="LoginOther">LoginOther</string>
    <string name="PleaseFillInAllFields">Please fill in all Fields</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="APIURL">http://10.0.2.2:57068/api/</string>
    <string name="create_event">Creëer een nieuw event</string>
    <string name="CNameEvent">Naam van het Event :</string>
    <string name="CAddress">Adress :</string>
    <string name="CNumber">Number :</string>
    <string name="CPostcode">Postcode :</string>
    <string name="CCity">City :</string>
    <string name="CUserCount">Aantal gasten :</string>
    <string name="CDatePicker">Kies een datum :</string>
    <string name="CTimePicker">Kies een Starttijd :</string>
    <string name="CComment">Voeg een opmerking toe :</string>
    <string name="Ccreate">Maak het event aan!</string>
    <string name="QrString">This is the view for QR</string>


    <string name="meat">Niet Vegetarisch</string>
    <string name="noMeat">Vegetarisch</string>
    <string name="alchohol">Alchohol</string>
    <string name="noAlchohol">Geen Alchohol</string>
    <string name="sleep">Blijven Slapen</string>
    <string name="noSleep">Niet Blijven Slapen</string>


    <string-array name="userCountArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>Meer dan 10</item>

    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
