<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#d3d3d3"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="0.56" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"

            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginBottom="20px"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                android:id="@+id/LblLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/username" />

            <EditText
                android:id="@+id/TxtLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.41"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                android:id="@+id/LblPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/password" />

            <EditText
                android:id="@+id/TxtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.41"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:padding="30px">

            <Button
                android:id="@+id/BtnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:onClick="loginClick"
                android:text="@string/Login" />

        </LinearLayout>

    </LinearLayout>



</android.widget.RelativeLayout>