<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetail.EventDetailFragment">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#d3d3d3"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                android:id="@+id/LblNameEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/CNameEvent" />
            <TextView
                android:id="@+id/LblEventNameString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="PlaceHolder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                android:id="@+id/LblAdress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/CAddress" />
            <TextView
                android:id="@+id/LblAdressString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="Placeholder" />
            <TextView
                android:id="@+id/LblHousenumberString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="119" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                android:id="@+id/LblPostcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="Stad :" />

            <TextView
                android:id="@+id/LblPostalCodeString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="0000" />
            <TextView
                android:id="@+id/LblCityString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="Placeholder" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="30px">
            <TextView
                android:id="@+id/LblAvaibleAttendees"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/CUserCount" />
            <TextView
                android:id="@+id/LblAvaibleAttendeesString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="5" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="30px">
            <TextView
                android:id="@+id/LblDateAndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="Datum en tijd :" />

            <TextView
                android:id="@+id/LblDateString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="23/05/1994" />
            <TextView
                android:id="@+id/LblTimeString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="19:30" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="30px">
            <TextView
                android:id="@+id/LblComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="Verdere uitleg :" />

            <TextView
                android:id="@+id/LblCommentString"
                android:lines="8"
                android:minLines="6"
                android:gravity="left"
                android:maxLines="10"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight=".50"
                android:scrollbars="vertical"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                android:id="@+id/lblFilter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="Filters : " />
            <TextView
                android:id="@+id/lblFilterString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/CComment" />


        </LinearLayout>
        <Button
            android:id="@+id/BtnPushGoEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:onClick="goToEventClick"
            android:text="Ga naar dit event!"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

</FrameLayout>